syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "frontend/tweet.proto";

package frontend;

service ProfileService {
  // Gets a user's profile page.
  rpc GetProfilePage(GetProfilePageRequest) returns (ProfilePage);
}

// A user profile page.
message ProfilePage {
  // The user ID.
  string user_id = 1;

  // The user's first name.
  string first_name = 2;

  // The user's last name.
  string last_name = 3;

  // The user's biography.
  string biography = 4;

  // The date the user joined.
  google.protobuf.Timestamp joined_at = 5;

  // The user's Tweets.
  repeated Tweet tweets = 6;
}

// Request for getting a user's profile page.
message GetProfilePageRequest {
  // The user ID.
  string user_id = 1;
}